--- a/generator.html
+++ b/generator.html
@@ -87,7 +87,7 @@
             nname += (prefix[Math.floor(Math.random()*prefix.length)] + root[Math.floor(Math.random()*root.length)] + ending[Math.floor(Math.random()*ending.length)]);
 			name = nname;
         }else if (style === 'medieval'){
-            prefix = ['Ma', 'Wili', 'Andre', 'Wi', 'Ali', 'Bea', 'Rola', 'Lu', 'Gise', 'A', 'O'];
+            prefix = ['Ma', 'Wili', 'Andre', 'Wi', 'Ali', 'Bea', 'Roza', 'Lu', 'Gise', 'A', 'O'];
             root = ['ria', 'us', 'chandra', 'helm', 'stria', 'nd', 'lya', 'ctrice', 'tto'];
 
 			nname = "";
